--- a/public/styles.css
+++ b/public/styles.css
@@ -1483,15 +1483,26 @@ Ensure the default browser behavior of the `hidden` attribute.
           animation: 0.4s moving-lines linear infinite forwards;
 }
 
-#footer>div {
-  display: grid;
+#footer--idk {
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 768px) {
-  #footer>div {
-    -moz-column-gap: 4rem;
-         column-gap: 4rem;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  #footer--idk {
+    flex-direction: row;
+  }
+
+  #footer--idk .footer--reach-us {
+    margin-right: 3.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 }
 
