--- a/public/styles.css
+++ b/public/styles.css
@@ -1491,18 +1491,24 @@ Ensure the default browser behavior of the `hidden` attribute.
 @media (min-width: 768px) {
   #footer--idk {
     flex-direction: row;
+    justify-content: space-between;
   }
 
   #footer--idk .footer--reach-us {
     margin-right: 3.5rem;
     display: flex;
+    width: 33.333333%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
+  }
+
+  #footer--idk .footer--reach-us:last-of-type {
+    margin-right: 0px;
   }
 }
 
@@ -1513,6 +1519,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.25rem;
 }
 
+@media (min-width: 768px) {
+  #footer--small-screen {
+    display: none;
+  }
+}
+
+#footer--big-screen {
+  margin-right: 2.5rem;
+  display: none;
+  text-align: left;
+  font-size: 1.375rem;
+  line-height: 1.375;
+}
+
+@media (min-width: 768px) {
+  #footer--big-screen {
+    display: block;
+  }
+}
+
 .footer--reach-us .preformatted {
   margin-bottom: 0px;
   padding-bottom: 1.875rem;
@@ -1521,8 +1547,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.25rem;
 }
 
-.footer--email {
-  margin-top: 3.75rem;
+#footer--email>.preformatted {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  width: 75%;
+  flex-direction: row;
+  align-items: flex-start;
+  padding-bottom: 0px;
+}
+
+#footer--email .footer--reach-us-icon {
+  padding-top: 0px;
+}
+
+@media (min-width: 768px) {
+  #footer--email .footer--reach-us-icon {
+    display: none;
+  }
+}
+
+#footer--email {
+  margin-top: 1.75rem;
+  padding-top: 1.875rem;
+  padding-bottom: 1.875rem;
 }
 
 .footer--bottom-divs {
@@ -1558,6 +1606,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 1rem;
 }
 
+@media (min-width: 768px) {
+  .footer--input-email {
+    margin-top: 0px;
+  }
+}
+
 input[type="email"]::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1579,6 +1633,12 @@ input[type="email"]::placeholder {
 input[type="email"]:focus {
   border-width: 0px;
   outline-width: 0px;
+}
+
+@media (min-width: 768px) {
+  input[type="email"] {
+    width: 100%;
+  }
 }
 
 .footer--input-email-enter-btn {
