--- a/public/styles.css
+++ b/public/styles.css
@@ -543,6 +543,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.animate-bodyOpacity {
+  -webkit-animation: bodyOpacity 0.8s linear forwards;
+          animation: bodyOpacity 0.8s linear forwards;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -713,6 +718,38 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-style: normal;
 }
 
+@-webkit-keyframes bodyOpacity{
+  100%{
+    opacity: 1;
+  }
+}
+
+@keyframes bodyOpacity{
+  100%{
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes sideNavAppear{
+  0%{
+    height: 0vh;
+  }
+
+  100%{
+    height: 100vh;
+  }
+}
+
+@keyframes sideNavAppear{
+  0%{
+    height: 0vh;
+  }
+
+  100%{
+    height: 100vh;
+  }
+}
+
 #menu--options-outer-div {
   position: relative;
   display: grid;
@@ -803,6 +840,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   #container, #header{
     max-width: calc(100% - 180px);
   }
+
+  #second-section--header{
+    max-width: 700px;
+  }
 }
 
 #header {
@@ -835,6 +876,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 #header--menu-icon-box {
+  pointer-events: auto;
   display: flex;
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -864,6 +906,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   -ms-writing-mode: tb-lr;
       writing-mode: vertical-lr;
   position: relative;
+  height: 0px;
+  overflow-y: hidden;
   padding-left: 1rem;
   padding-right: 1rem;
   text-align: center;
@@ -1005,6 +1049,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 @media (min-width: 768px) {
   #main {
     top: 15.6rem;
+    -webkit-animation: bodyOpacity 0.5s linear 2s forwards;
+            animation: bodyOpacity 0.5s linear 2s forwards;
+    opacity: 0;
   }
 }
 
@@ -1674,5 +1721,25 @@ input[type="email"]:focus {
 @media (min-width: 768px) {
   .md\:hidden {
     display: none;
+  }
+
+  .md\:animate-bodyOpacityFast {
+    -webkit-animation: bodyOpacity 0.5s linear forwards;
+            animation: bodyOpacity 0.5s linear forwards;
+  }
+
+  .md\:animate-sideNav-2 {
+    -webkit-animation: sideNavAppear 0.6s ease-out 0.3s forwards;
+            animation: sideNavAppear 0.6s ease-out 0.3s forwards;
+  }
+
+  .md\:animate-sideNav-1 {
+    -webkit-animation: sideNavAppear 0.5s ease-out 0.2s forwards;
+            animation: sideNavAppear 0.5s ease-out 0.2s forwards;
+  }
+
+  .md\:animate-sideNav-0 {
+    -webkit-animation: sideNavAppear 0.4s ease-out 0.1s forwards;
+            animation: sideNavAppear 0.4s ease-out 0.1s forwards;
   }
 }
