--- a/src/styles.css
+++ b/src/styles.css
@@ -83,6 +83,22 @@
     font-style: normal;
 }
 
+@keyframes bodyOpacity{
+	100%{
+		opacity: 1;
+	}
+}
+
+@keyframes sideNavAppear{
+	0%{
+		height: 0vh;
+	}
+
+	100%{
+		height: 100vh;
+	}
+}
+
 #menu--options-outer-div{
 	@apply grid grid-cols-2 grid-rows-2 h-5/6 text-c-black text-xl relative
 }
@@ -121,6 +137,10 @@
 	#container, #header{
 		max-width: calc(100% - 180px);
 	}
+
+	#second-section--header{
+		max-width: 700px;
+	}
 }
 
 #header{
@@ -132,16 +152,16 @@
 }
 
 #header--menu-icon-box{
-	@apply text-4xl flex md:hidden
+	@apply text-4xl flex md:hidden pointer-events-auto
 }
 
 #side-navigation{
-	@apply hidden md:flex fixed right-0 inset-y-0
+	@apply hidden md:flex fixed right-0 inset-y-0;
 }
 
 .side--navigation-links{
 	writing-mode: vertical-lr;
-	@apply text-center px-4 font-apercu-mono text-xl before:absolute before:top-[4.7rem] before:inset-x-0 relative;
+	@apply text-center px-4 font-apercu-mono text-xl before:absolute before:top-[4.7rem] before:inset-x-0 relative h-0 overflow-y-hidden;
 }
 
 .side--navigation-links:before{
@@ -201,7 +221,7 @@
 }
 
 #main{
-	@apply relative top-[300px] md:top-[15.6rem]
+	@apply relative top-[300px] md:top-[15.6rem] md:opacity-0 md:animate-mainOpacity
 }
 
 #main>section, #footer{
